cabal-version:       3.0

name:                squan
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/squan#readme
license:             BSD-3-Clause
author:              Author name here
maintainer:          example@example.com
copyright:           2022 Author name here
category:            Web
build-type:          Simple

executable squan
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends: base >= 4.13 && < 5
               , gloss
               , worldturtle >= 0.3 && < 0.4
